--- a/index.html
+++ b/index.html
@@ -7,17 +7,27 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Tes</title>
   <link rel="stylesheet" href="./css/styles.css">
+  <!-- font-family: 'Open Sans', sans-serif; -->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,800&display=swap" rel="stylesheet">
 
 </head>
 
 <body onload="startGame()">
-  <video autoplay loop muted>
-    <source src="./media/Belajar Fokus.mp4" type="video/mp4">
+  <video id="video1" loop muted>
+    <source src="./media/My Video1.mp4" type="video/mp4">
   </video>
+  <h1>GESER TOMBOL KIRI DAN KANAN PADA KEYBOARD</h1>
+  <button onclick="playPause()">Play/Pause</button>
+  <script type="text/javascript">
+  var myVideo = document.getElementById("video1");
 
-  <!-- <canvas id="myCanvas" width="600" height="600" style="border:1px solid #000000;">
-  </canvas> -->
-
+  function playPause() {
+    if (myVideo.paused)
+      myVideo.play();
+    else
+      myVideo.pause();
+  }
+  </script>
   <script src="./js/script.js" type="text/javascript">
 
   </script>
